Add Prerequisite (ConnectionString -> Tools as AutoMapper , SwaggerGen -> Injector -> Localizer -> ExceptionHandler ) => Add BaseClasses (DbContexts & Repositories & Configurations -> ApplicationService & AppCore means Appication Requirements -> Domain & Domain Service & Test Requirements -> Controller)

--- a/Mc2.CrudTest.Application.Contract/Mc2.CrudTest.Application.Contract.csproj
+++ b/Mc2.CrudTest.Application.Contract/Mc2.CrudTest.Application.Contract.csproj
@@ -5,13 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Abstractions\" />
-    <Folder Include="DTOs\" />
-    <Folder Include="ViewModels\" />
+    <Folder Include="DTOs\CustomerManagement\" />
+    <Folder Include="Queries\CustomerManagement\" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Mc2.CrudTest.Application\Mc2.CrudTest.Application.csproj" />
+    <ProjectReference Include="..\Mc2.CrudTest.Core\Mc2.CrudTest.Application.Core.csproj" />
   </ItemGroup>
 
 </Project>
