--- a/Mc2.CrudTest.Persistence.SqlServer/Mc2.CrudTest.Infrastructure.Persistence.SqlServer.csproj
+++ b/Mc2.CrudTest.Persistence.SqlServer/Mc2.CrudTest.Infrastructure.Persistence.SqlServer.csproj
@@ -19,8 +19,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="DbContexts\" />
     <Folder Include="Migrations\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Mc2.CrudTest.Persistence\Mc2.CrudTest.Infrastructure.Persistence.csproj" />
   </ItemGroup>
 
 </Project>
