--- a/Mc2.CrudTest.Persistence.Sqlite/Mc2.CrudTest.Infrastructure.Persistence.Sqlite.csproj
+++ b/Mc2.CrudTest.Persistence.Sqlite/Mc2.CrudTest.Infrastructure.Persistence.Sqlite.csproj
@@ -21,7 +21,10 @@
 
   <ItemGroup>
     <Folder Include="Migrations\" />
-    <Folder Include="DbContexts\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Mc2.CrudTest.Persistence\Mc2.CrudTest.Infrastructure.Persistence.csproj" />
   </ItemGroup>
 
 </Project>
