--- a/Mc2.CrudTest.Persistence/Mc2.CrudTest.Infrastructure.Persistence.csproj
+++ b/Mc2.CrudTest.Persistence/Mc2.CrudTest.Infrastructure.Persistence.csproj
@@ -5,13 +5,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Configurations\CustomerManagement\" />
-    <Folder Include="DbContexts\" />
-    <Folder Include="Repositories\CustomerManagement\" />
-    <Folder Include="UnitofWork\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.17">
       <PrivateAssets>all</PrivateAssets>
@@ -22,6 +15,10 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Mc2.CrudTest.Domain\Mc2.CrudTest.Domain.csproj" />
   </ItemGroup>
 
 </Project>
