--- a/Mc2.CrudTest.Application/Mc2.CrudTest.Application.csproj
+++ b/Mc2.CrudTest.Application/Mc2.CrudTest.Application.csproj
@@ -13,13 +13,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="DependencyInjectionExtensions\" />
-    <Folder Include="Handelers\" />
-    <Folder Include="Queries\" />
-    <Folder Include="Services\" />
+    <Folder Include="Handelers\CustomerManagement\" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Mc2.CrudTest.Application.Contract\Mc2.CrudTest.Application.Contract.csproj" />
     <ProjectReference Include="..\Mc2.CrudTest.Domain\Mc2.CrudTest.Domain.csproj" />
     <ProjectReference Include="..\Mc2.CrudTest.Persistence.ReadModules\Mc2.CrudTest.Infrastructure.ReadModules.csproj" />
     <ProjectReference Include="..\Mc2.CrudTest.Persistence\Mc2.CrudTest.Infrastructure.Persistence.csproj" />
