[Implement Create Customer Bussiness (Validations , DomainServices , CreateObject) => Edit Tdd Tests] Go On Several Times => Complete Localization Resource => Change Configure => Create Migration => Tdd Test Pass :)

--- a/Mc2.CrudTest.AcceptanceTests/appsettings.json
+++ b/Mc2.CrudTest.AcceptanceTests/appsettings.json
@@ -1,5 +1,6 @@
 {
   "ConnectionStrings": {
+    //"InMemoryConnection": "Data Source=InMemoryTest;Mode=Memory;Cache=Shared"
     "InMemoryConnection": "Data Source=:memory:"
   },
 
