--- a/Mc2.CrudTest.Domain/Mc2.CrudTest.Domain.csproj
+++ b/Mc2.CrudTest.Domain/Mc2.CrudTest.Domain.csproj
@@ -10,6 +10,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="libphonenumber-csharp" Version="8.13.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Mc2.CrudTest.Core\Mc2.CrudTest.Application.Core.csproj" />
   </ItemGroup>
 
