--- a/Mc2.CrudTest.Presentation/Server/appsettings.json
+++ b/Mc2.CrudTest.Presentation/Server/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "MainConnection": "Server=.;Database=CrudTest;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"MainConnection": "Server=.;Database=CrudTest;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "MainConnection": "Data Source=Data\\Data.db"
   },
   "Logging": {
     "LogLevel": {
