Add Controller => Implement Queries(& Commands) => Implement Handlers => Add Mediater => Complete Db Configurations

--- a/Mc2.CrudTest.Presentation/Server/appsettings.json
+++ b/Mc2.CrudTest.Presentation/Server/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    //"MainConnection": "Server=.;Database=CrudTest;Trusted_Connection=True;MultipleActiveResultSets=true"
-    "MainConnection": "Data Source=Data\\Data.db"
+    "MainConnection": "Server=.;Database=CrudTest;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"MainConnection": "Data Source=Data\\Data.db"
   },
   "Logging": {
     "LogLevel": {
