--- a/Mc2.CrudTest.Application.Contract/Mc2.CrudTest.Application.Contract.csproj
+++ b/Mc2.CrudTest.Application.Contract/Mc2.CrudTest.Application.Contract.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Queries\CustomerManagement\" />
+    <PackageReference Include="MediatR" Version="11.1.0" />
   </ItemGroup>
 
   <ItemGroup>
